argocd/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
spec:
  finalizers:
    - kubernetes
