argocd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-application-controller
spec:
  template:
    spec:
      containers:
        - image: quay.io/cybozu/argocd
          name: argocd-application-controller
          command:
            - argocd-application-controller
            - --status-processors
            - "100"
            - --operation-processors
            - "20"
            - --app-resync
            - "60"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-redis
spec:
  template:
    spec:
      containers:
        - image: quay.io/cybozu/redis
          name: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
      - image: quay.io/cybozu/argocd
        name: argocd-repo-server
        command:
        - argocd-repo-server
        - --redis
        - argocd-redis:6379
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
      - command:
        - argocd-server
        - --staticassets
        - /shared/argocd/app
        image: quay.io/cybozu/argocd
        name: argocd-server
        volumeMounts:
        - mountPath: /app/config/ssh
          name: ssh-known-hosts
        - mountPath: /app/config/tls
          name: tls-certs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
spec:
  template:
    spec:
      containers:
      - name: dex
        image: quay.io/cybozu/dex
        command: [/shared/argocd-util, rundex]
        volumeMounts:
        - mountPath: /tmp
          name: tmp
      volumes:
      - emptyDir: {}
        name: tmp
